--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     }
   },
   "lint-staged": {
-    "src/*": "prettier --write",
     "*.{css,scss}": "stylelint --fix",
-    "*.{ts,tsx}": [
+    "src/**/*.{ts,tsx}": [
       "eslint --fix --ignore-pattern '*.config.js'",
       "git add"
     ]
@@ -53,12 +52,14 @@
     "@types/node": "12.12.30",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
+    "ramda": "0.27.0",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-scripts": "3.4.0",
     "typescript": "3.7.5"
   },
   "devDependencies": {
+    "@types/ramda": "0.26.44",
     "react-app-rewired": "2.1.5",
     "typedoc": "0.17.1"
   }
