--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,24 @@
 {
+  "editor.insertSpaces": true,
+  "editor.tabSize": 2,
   "typescript.tsdk": "node_modules/typescript/lib",
+  "eslint.workingDirectories": ["../src"],
+  "eslint.packageManager": "npm",
+  "eslint.nodePath": "node_modules/eslint/lib",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "editor.insertSpaces": true,
-  "editor.tabSize": 2,
-  "plantuml.render": "PlantUMLServer",
-  "plantuml.server": "https://www.plantuml.com/plantuml/",
+  "[json]": {
+    "editor.formatOnSave": true
+  },
+  "[javascript]": {
+    "editor.formatOnSave": true
+  },
   "path-autocomplete.pathMappings": {
     "@Components": "${folder}/src/presentation/components",
     "@": "${folder}/src"
-  }
+  },
+  "plantuml.render": "PlantUMLServer",
+  "plantuml.server": "https://www.plantuml.com/plantuml/",
+  "eslint.alwaysShowStatus": true
 }
