--- a/package.json
+++ b/package.json
@@ -64,8 +64,11 @@
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier": "3.1.2",
+    "husky": "4.2.3",
+    "lint-staged": "10.0.8",
     "prettier": "1.19.1",
     "react-app-rewired": "2.1.5",
+    "stylelint": "13.2.1",
     "typedoc": "0.17.1"
   }
 }
