--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
@@ -51,6 +53,8 @@
     "@types/node": "12.12.30",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
+    "node-sass": "^4.13.1",
+    "notistack": "^0.9.9",
     "ramda": "0.27.0",
     "react": "16.13.0",
     "react-dom": "16.13.0",
