--- a/package.json
+++ b/package.json
@@ -44,34 +44,57 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "4.9.7",
+    "@material-ui/icons": "4.9.1",
+    "@reduxjs/toolkit": "1.2.5",
+    "@sentry/browser": "5.14.2",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
     "@types/jest": "24.9.1",
     "@types/node": "12.12.30",
     "@types/react": "16.9.23",
-    "@types/react-dom": "16.9.5",
-    "node-sass": "^4.13.1",
-    "notistack": "^0.9.9",
+    "connected-react-router": "6.8.0",
+    "date-fns": "2.11.0",
+    "firebase": "7.11.0",
+    "node-sass": "4.13.1",
+    "notistack": "0.9.9",
     "ramda": "0.27.0",
     "react": "16.13.0",
+    "react-app-polyfill": "1.0.6",
     "react-dom": "16.13.0",
+    "react-redux": "7.2.0",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "3.7.5"
+    "redux": "4.0.5",
+    "redux-observable": "1.2.0",
+    "redux-sentry-middleware": "0.1.6",
+    "reselect": "4.0.0",
+    "rxjs": "6.5.4",
+    "typescript": "3.7.5",
+    "typescript-fsa-redux-observable-of-action": "0.0.2"
   },
   "devDependencies": {
+    "@types/firebase": "3.2.1",
     "@types/ramda": "0.26.44",
+    "@types/react-dom": "16.9.5",
+    "@types/react-redux": "7.1.7",
+    "@types/react-router": "5.1.4",
+    "@types/react-router-dom": "5.1.3",
+    "@types/redux-sentry-middleware": "0.1.1",
     "@typescript-eslint/eslint-plugin": "2.24.0",
     "@typescript-eslint/parser": "2.24.0",
+    "cross-env": "7.0.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier": "3.1.2",
+    "firebase-tools": "7.15.1",
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
     "prettier": "1.19.1",
     "react-app-rewired": "2.1.5",
+    "source-map-explorer": "2.4.0",
     "stylelint": "13.2.1",
     "typedoc": "0.17.1"
   }
