--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "cross-env": "7.0.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "3.1.2",
     "firebase-tools": "7.15.1",
     "husky": "4.2.3",
