ADD: initial store

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "reselect": "4.0.0",
     "rxjs": "6.5.4",
     "typescript": "3.7.5",
+    "typescript-fsa": "3.0.0",
     "typescript-fsa-redux-observable-of-action": "0.0.2"
   },
   "devDependencies": {
@@ -88,8 +89,9 @@
     "cross-env": "7.0.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-react-app": "5.2.0",
+    "eslint-import-resolver-alias": "1.1.2",
+    "eslint-plugin-import": "2.20.1",
     "eslint-plugin-prettier": "3.1.2",
     "firebase-tools": "7.15.1",
     "husky": "4.2.3",
