--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-app-rewired": "2.1.5",
     "source-map-explorer": "2.4.0",
     "stylelint": "13.2.1",
-    "typedoc": "0.17.1"
+    "typedoc": "0.17.1",
+    "typescript-plugin-css-modules": "^2.2.0"
   }
 }
