--- a/package.json
+++ b/package.json
@@ -84,13 +84,14 @@
     "@types/react-router-dom": "5.1.3",
     "@types/redux-sentry-middleware": "0.1.1",
     "@typescript-eslint/eslint-plugin": "2.24.0",
-    "@typescript-eslint/parser": "2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
     "cross-env": "7.0.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-config-react-app": "5.2.0",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-plugin-import": "2.20.1",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "3.1.2",
     "firebase-tools": "7.15.1",
     "husky": "4.2.3",
