--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "cross-env REACT_APP_STAGING_FLAG=1 react-app-rewired build",
     "build:prod": "react-app-rewired build",
     "test": "react-app-rewired test",
+    "firebase-cli": "firebase",
     "test:nowatch": "cross-env CI=true react-app-rewired test",
     "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "docs": "typedoc --out ./docs --target ES6 --mode file ./src/helpers ./src/types ./src/models ./src/services"
