--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     ]
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.4.0",
     "@material-ui/core": "4.9.7",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "1.2.5",
     "@sentry/browser": "5.14.2",
     "@testing-library/jest-dom": "4.2.4",
