--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "connected-react-router": "6.8.0",
     "date-fns": "2.11.0",
     "firebase": "7.11.0",
+    "nanoid": "^2.1.11",
     "node-sass": "4.13.1",
     "notistack": "0.9.9",
     "ramda": "0.27.0",
@@ -80,6 +81,7 @@
   },
   "devDependencies": {
     "@types/firebase": "3.2.1",
+    "@types/nanoid": "^2.1.0",
     "@types/ramda": "0.26.44",
     "@types/react-dom": "16.9.5",
     "@types/react-redux": "7.1.7",
