FIXED: domain model path

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,7 +4,7 @@
     "paths": {
       "@Components/*": ["./presentation/components/*"],
       "@Events/*": ["./presentation/events/*"],
-      "@DomainModels/*": ["./domain/models"],
+      "@DomainModels/*": ["./domain/models/*"],
       "@/*": ["./*"]
     }
   }
