--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "jest": {
     "transformIgnorePatterns": [
-      "node_modules/(?!(ramda|date-fns)/)"
+      "/node_modules/(?!(ramda|date-fns)/)"
+    ],
+    "moduleFileExtensions": [
+      "ts"
     ]
   },
   "engines": {
