ADD: Editable Table

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "@types/react": "16.9.23",
     "connected-react-router": "6.8.0",
     "date-fns": "2.11.0",
-    "firebase": "7.11.0",
+    "firebase": "7.14.0",
+    "material-table": "1.57.2",
     "nanoid": "^2.1.11",
     "node-sass": "4.13.1",
     "notistack": "0.9.9",
