--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
     ]
   },
   "dependencies": {
-    "@date-io/date-fns": "^2.4.0",
+    "@date-io/date-fns": "2.4.0",
     "@material-ui/core": "4.9.7",
     "@material-ui/icons": "4.9.1",
-    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/pickers": "3.2.10",
     "@reduxjs/toolkit": "1.2.5",
     "@sentry/browser": "5.14.2",
     "@testing-library/jest-dom": "4.2.4",
@@ -76,7 +76,7 @@
     "date-fns": "2.11.0",
     "firebase": "7.14.0",
     "material-table": "1.57.2",
-    "nanoid": "^2.1.11",
+    "nanoid": "2.1.11",
     "node-sass": "4.13.1",
     "notistack": "0.9.9",
     "ramda": "0.27.0",
@@ -97,7 +97,7 @@
   },
   "devDependencies": {
     "@types/firebase": "3.2.1",
-    "@types/nanoid": "^2.1.0",
+    "@types/nanoid": "2.1.0",
     "@types/ramda": "0.26.44",
     "@types/react-dom": "16.9.5",
     "@types/react-redux": "7.1.7",
@@ -105,14 +105,14 @@
     "@types/react-router-dom": "5.1.3",
     "@types/redux-sentry-middleware": "0.1.1",
     "@typescript-eslint/eslint-plugin": "2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
+    "@typescript-eslint/parser": "2.24.0",
     "cross-env": "7.0.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-config-react-app": "5.2.0",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-import-resolver-typescript": "2.0.0",
+    "eslint-plugin-import": "2.20.1",
     "eslint-plugin-prettier": "3.1.2",
     "firebase-tools": "7.15.1",
     "husky": "4.2.3",
@@ -122,6 +122,6 @@
     "source-map-explorer": "2.4.0",
     "stylelint": "13.2.1",
     "typedoc": "0.17.1",
-    "typescript-plugin-css-modules": "^2.2.0"
+    "typescript-plugin-css-modules": "2.2.0"
   }
 }
